tests/paczka1/fuzzy1/93033042.err
Error in line 9: bHaYHWa S456 64,4
Error in line 11: bHaYHWa A576 27,9
Error in line 16: 27dzb632nH A576 67,6
Error in line 15: nSD A96 15,4
Error in line 22: 8KL A576 24,9
Error in line 39: ISh4yHP S128 72,2
